# Celebrity-Look-alike-with-FaceNet

./: PT_FaceNet_OpenFamousFaces_chilo.ipynb  README.md  main.py  pyproject.toml
